.apex/unpackaged/objects/redwing__Response__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Boolean_Response__c</fullName>
        <label>Boolean Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Correct_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Number_Response__c</fullName>
        <label>Number Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Question_Type__c</fullName>
        <formula>TEXT(redwing__Question__r.redwing__Type__c)</formula>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question</label>
        <referenceTo>redwing__Question__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Response_Answer_Sequence_Label__c</fullName>
        <label>Response Answer Sequence Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Response_Answer_Sequence_Long__c</fullName>
        <label>Response Answer Sequence Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Response_Answer_Sequence__c</fullName>
        <label>Response Answer Sequence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Response_Text_Long__c</fullName>
        <label>Response Text Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Response_Text__c</fullName>
        <label>Response Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Shared_Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared Learning Assignment</label>
        <referenceTo>redwing__Shared_Learning_Assignment__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Response</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__User__c</columns>
        <columns>redwing__Learning_Assignment__c</columns>
        <columns>redwing__Question__c</columns>
        <columns>redwing__Question_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RES-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>